--- a/contacts.html
+++ b/contacts.html
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="fs20 m_li">Портфолио</li>
+                <li class="fs20 m_li"><a href="portfolio.html" class="m_li">Портфолио</a></li>
                 <li class="fs20 m_li"><a href="about-us.html" class="m_li">О нас</a></li>
                 <li class="fs20 m_li"><a href="news.html" class="m_li">Новости</a></li>
                 <li class="fs20 m_li"><a href="contacts.html" class="m_li">Контакты</a></li>
