--- a/subcategory-page.html
+++ b/subcategory-page.html
@@ -10,6 +10,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Advance</title>
+    <link rel="stylesheet" href="css/style.min.css">
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script defer src="src/script/lazy.js"></script>
+    <script defer src="src/script/main.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
 <!--HEADER-->
 <header>
     <div class="header_wrapper">
@@ -44,7 +56,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="fs20 m_li">Портфолио</li>
+                <li class="fs20 m_li"><a href="portfolio.html" class="m_li">Портфолио</a></li>
                 <li class="fs20 m_li"><a href="about-us.html" class="m_li">О нас</a></li>
                 <li class="fs20 m_li"><a href="news.html" class="m_li">Новости</a></li>
                 <li class="fs20 m_li"><a href="contacts.html" class="m_li">Контакты</a></li>
