--- a/portfolio.html
+++ b/portfolio.html
@@ -113,12 +113,20 @@
     </div>
 </section>
 <section class="portfolio_bottom">
-    <div class="left">
+    <div class="p_top">
         <span class="fs48_r">Итория про член</span>
-        <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами. Эта парадигматическая страна.</p>
+        <div class="triangles">
+            <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+            <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+        </div>
     </div>
-    <div class="right">
-        <img data-lazy="src/img/portfolio/p1.png" src="/" alt="decoration">
+    <div class="p_bottom">
+        <div class="left  xxx1">
+            <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами. Эта парадигматическая страна.</p>
+        </div>
+        <div class="right">
+            <img data-lazy="src/img/portfolio/p1.png" src="/" alt="decoration">
+        </div>
     </div>
 </section>
 <footer>
