--- a/news.html
+++ b/news.html
@@ -190,7 +190,7 @@
     </div>
     <div class="main_why_we xxx2_2 s_m">
         <div>
-            <button class="why_we_slogan adv_btn s_m">Больше новостей</button>
+            <button class="why_we_slogan adv_btn">Больше новостей</button>
         </div>
     </div>
 </section>
@@ -322,3 +322,5 @@
         </div>
     </div>
 </footer>
+</body>
+</html>
