--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,7 @@
 </section>
 <section class="portfolio_bottom">
     <div class="p_top">
-        <span class="fs48_r">Итория про член</span>
+        <span class="fs48_r">Итория про</span>
         <div class="triangles">
             <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
             <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
@@ -256,3 +256,5 @@
         </div>
     </div>
 </footer>
+</body>
+</html>
