--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                             </div>
                             <div class="menu_category_img">
                                 <img class="change-image" data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
-                                <div class="menu_category_img_border"></div>
                             </div>
                         </div>
                     </li>
@@ -140,12 +139,12 @@
         <div class="how_we_work_left">
             <p class="bigger">Как мы работаем</p>
             <div class="xxx1">
-                <p>Далеко-далеко за словесными горами в стране гласных<br>
-                    и согласных живут рыбные тексты. Вдали от всех живут<br>
-                    они в буквенных домах на берегу Семантика большого<br>
-                    языкового океана. Маленький ручеек Даль журчит по<br>
-                    всей стране и обеспечивает ее всеми необходимыми<br>
-                    правилами. Эта парадигматическая страна, в которой<br>
+                <p>Далеко-далеко за словесными горами в стране гласных
+                    и согласных живут рыбные тексты. Вдали от всех живут
+                    они в буквенных домах на берегу Семантика большого
+                    языкового океана. Маленький ручеек Даль журчит по
+                    всей стране и обеспечивает ее всеми необходимыми
+                    правилами. Эта парадигматическая страна, в которой
                     жаренные члены предложения залетают прямо в рот.</p>
             </div>
             <div class="triangles2">
