--- a/about-us.html
+++ b/about-us.html
@@ -21,7 +21,7 @@
                     <div class="dropdown_wrapper">
                         <div class="menu_category">
                             <ul>
-                                <li class="m_li menu_category_bnt1">Брендированная одежда</li>
+                                <li class="m_li menu_category_bnt1"><a href="category-page.html">Брендированная одежда</a></li>
                                 <li class="m_li menu_category_bnt2">Наружная реклама</li>
                                 <li class="m_li menu_category_bnt3">Широкоформатная печать</li>
                                 <li class="m_li menu_category_bnt4">Оформление интерьеров</li>
