--- a/blog-page.html
+++ b/blog-page.html
@@ -59,7 +59,7 @@
 <div class="header_fix">
 </div>
 <section class="blog_wrapper">
-    <div class="category_container subcategory_fix blog">
+    <div class="category_container subcategory_fix blog bp">
         <div class="blog_top_container">
             <div>
                 <p class="fs36_r">Blog</p>
