--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
                 <a href="tel://057 761 761 6" class="orange">057 761 761 6</a>
             </div>
         </div>
+       <div class="mob_menu">
+           <nav role="navigation">
+               <div id="menuToggle">
+                   <input type="checkbox" />
+                   <span></span>
+                   <span></span>
+                   <span></span>
+                   <ul id="menu">
+                       <li><a href="portfolio.html" class="m_li">Портфолио</a></li>
+                       <li><a href="about-us.html" class="m_li">О нас</a></li>
+                       <li><a href="news.html" class="m_li">Новости</a></li>
+                       <li><a href="contacts.html" class="m_li">Контакты</a></li>
+                   </ul>
+               </div>
+           </nav>
+       </div>
 </header>
 <!--HEADER END-->
 <!--TOP SECTION-->
@@ -319,7 +335,7 @@
             </div>
             <div>
                 <div class="footer_copyright">
-                    <p class="r">Copyright &copy; 2019 ADVANCE. All rights reserved</p>
+                    <p class="r">Copyright &copy; 2019-2020 ADVANCE. All rights reserved</p>
                 </div>
             </div>
         </div>
@@ -333,6 +349,9 @@
                 <span><a href="#"><img data-lazy="src/img/footer/facebook.svg" src="/" alt="facebook icon"></a></span>
             </div>
         </div>
+    </div>
+    <div class="footer_mobile_copy">
+        <p>Copyright &copy; 2019-2020 ADVANCE.<br> All rights reserved</p>
     </div>
 </footer>
 </body>
