--- a/index.html
+++ b/index.html
@@ -170,9 +170,7 @@
             </div>
         </div>
         <div class="how_we_work_right">
-<!--                <div class="menu_services_stripes stripes"></div>-->
                 <img data-lazy="src/img/main/How%20we%20work.webp" src="/" alt="Black Image" />
-<!--                <div class="menu_services_img_border"></div>-->
         </div>
     </div>
     <div class="main_how_we_work_bottom xxx4">
@@ -307,10 +305,9 @@
             </div>
             <div class="contact_map">
                 <img data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
-                <div class="stripes"></div>
             </div>
             <div class="f_mail">
-                <p>Мы всегда открыты к сотрудничеству с заказчиками, поставщиками материалов, производителями и рекламными агенствами. Отправьте<br> нам запрос и мы свяжемся с вами в течении часа<br>
+                <p>Мы всегда открыты к сотрудничеству с заказчиками, поставщиками материалов, производителями и рекламными агенствами. Отправьте нам запрос и мы свяжемся с вами в течении часа<br>
                 <span><a href="mailto:advanced.kh.ua@gmail.com" class="orange">advanced.kh.ua@gmail.com</a></span>
                 </p>
             </div>
