--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
                     <button class="btn" onclick="openCategory(event,'c_test')">Широкоформатная печать</button>
                     <button class="btn" onclick="openCategory(event,'c_exclusive1')">Сувенирная продукция</button>
                     <button class="btn" onclick="openCategory(event,'c_exclusive1')">Корпоративный стиль</button>
-                    <button class="btn" onclick="openCategory(event,'c_exclusive1')">Наружная реклама</button><br>
+                    <button class="btn" onclick="openCategory(event,'c_exclusive1')">Наружная реклама</button>
 <!--                !!!!-->
                 <button class="btn" onclick="openCategory(event,'c_brand')">Оформление интерьеров</button>
                 <button class="btn" onclick="openCategory(event,'c_polygraphy')">Полиграфия</button>
